# psoc-experiments

./: .gitignore  Cargo.toml  README.md  openocd.cfg  openocd.gdb
psoc6-cm0-basic-hal/: Cargo.toml  README.md
psoc6-cm0-basic-hal/src/: main.rs
psoc6-cm0-bootloader/: Cargo.toml  README.md  memory.x
psoc6-cm0-bootloader/.cargo/: config.toml
psoc6-cm0-bootloader/src/: main.rs
psoc6-cm0-hello-world/: Cargo.toml
psoc6-cm0-hello-world/.cargo/: config.toml
psoc6-cm0-hello-world/src/: main.rs
psoc6-cm0-interrupts/: Cargo.toml
psoc6-cm0-interrupts/src/: main.rs
psoc6-cm0-simple-db/: Cargo.toml  openocd.gdb
psoc6-cm0-simple-db/simple-db/: Cargo.toml
psoc6-cm0-simple-db/simple-db/src/: lib.rs
psoc6-cm0-simple-db/src/: main.rs
psoc6-cm0-tiny/: Cargo.toml  README.md  link.x
psoc6-cm0-tiny/src/: main.rs
psoc6-cm0-tiny2/: Cargo.toml  README.md  link.x
psoc6-cm0-tiny2/.cargo/: config.toml
psoc6-cm0-tiny2/src/: main.rs
psoc6-cm0-tiny3/: Cargo.toml  README.md  build.rs  memory.x  openocd.gdb
psoc6-cm0-tiny3/src/: main.rs
psoc6-cm4-hello-world/: Cargo.toml
psoc6-cm4-hello-world/.cargo/: config.toml
psoc6-cm4-hello-world/src/: main.rs
psoc6-cm4-interrupts/: Cargo.toml  openocd.gdb
psoc6-cm4-interrupts/src/: main.rs
psoc6-cm4-peripherals/: Cargo.toml  memory.x
psoc6-cm4-peripherals/src/: main.rs
psoc6-cm4-rtic/: Cargo.toml  connect.gdb  image.map  memory-bootloader.x  memory-raw.x  openocd.gdb
psoc6-cm4-rtic/.cargo/: config.toml
psoc6-cm4-rtic/src/: main.rs
psoc6-pac/: Cargo.toml  device.x
psoc6-pac/src/: backup.rs  cpuss.rs  csd0.rs  dmac.rs  dw0.rs  efuse.rs  fault.rs  flashc.rs  gpio.rs  hsiom.rs  i2s0.rs  ipc.rs  lcd0.rs  lib.rs  lpcomp.rs  pass.rs  pdm0.rs  peri.rs  peri_ms.rs  profile.rs  prot.rs  sar.rs  scb0.rs  sdhc0.rs  smartio.rs  smif0.rs  srss.rs  tcpwm0.rs  usbfs0.rs
psoc6-pac/src/backup/: alm1_date.rs  alm1_time.rs  alm2_date.rs  alm2_time.rs  breg.rs  cal_ctl.rs  ctl.rs  intr.rs  intr_mask.rs  intr_masked.rs  intr_set.rs  osccnt.rs  pmic_ctl.rs  reset.rs  rtc_date.rs  rtc_rw.rs  rtc_time.rs  status.rs  ticks.rs  trim.rs
psoc6-pac/src/cpuss/: ap_ctl.rs  buff_ctl.rs  cal_sup_clr.rs  cal_sup_set.rs  cm0_clock_ctl.rs  cm0_ctl.rs  cm0_int0_status.rs  cm0_int1_status.rs  cm0_int2_status.rs  cm0_int3_status.rs  cm0_int4_status.rs  cm0_int5_status.rs  cm0_int6_status.rs  cm0_int7_status.rs  cm0_nmi_ctl.rs  cm0_pc0_handler.rs  cm0_pc1_handler.rs  cm0_pc2_handler.rs  cm0_pc3_handler.rs  cm0_pc_ctl.rs  cm0_status.rs  cm0_system_int_ctl.rs  cm0_vector_table_base.rs  cm4_clock_ctl.rs  cm4_ctl.rs  cm4_int0_status.rs  cm4_int1_status.rs  cm4_int2_status.rs  cm4_int3_status.rs  cm4_int4_status.rs  cm4_int5_status.rs  cm4_int6_status.rs  cm4_int7_status.rs  cm4_nmi_ctl.rs  cm4_pwr_ctl.rs  cm4_pwr_delay_ctl.rs  cm4_status.rs  cm4_system_int_ctl.rs  cm4_vector_table_base.rs  dp_status.rs  (+21 more)
psoc6-pac/src/csd0/: adc_ctl.rs  adc_res.rs  ambuf.rs  config.rs  csdcmp.rs  hscmp.rs  idaca.rs  idacb.rs  intr.rs  intr_mask.rs  intr_masked.rs  intr_set.rs  io_sel.rs  refgen.rs  result_val1.rs  result_val2.rs  sense_duty.rs  sense_period.rs  seq_init_cnt.rs  seq_norm_cnt.rs  seq_start.rs  seq_time.rs  spare.rs  stat_cnts.rs  stat_hcnt.rs  stat_seq.rs  status.rs  sw_amuxbuf_sel.rs  sw_byp_sel.rs  sw_cmp_n_sel.rs  sw_cmp_p_sel.rs  sw_dsi_sel.rs  sw_fw_mod_sel.rs  sw_fw_tank_sel.rs  sw_hs_n_sel.rs  sw_hs_p_sel.rs  sw_refgen_sel.rs  sw_res.rs  sw_shield_sel.rs
psoc6-pac/src/dmac/: active.rs  ch.rs  ctl.rs
psoc6-pac/src/dw0/: act_descr_ctl.rs  act_descr_dst.rs  act_descr_next_ptr.rs  act_dst.rs  (+14 more)
simple-db/src/: lib.rs
(+803 files in other folders)
