[package]
authors = ["Jonathan Pallant (Ferrous Systems) <jonathan.pallant@ferrous-systems.com>"]
edition = "2021"
readme = "README.md"
name = "psoc6-cm0-tiny3"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.0", features=["inline-asm"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"

[profile.release]
lto = true
opt-level = "z"
debug = true
